wier/force-app/main/default/objects/Call_Report__c/Call_Report__c.object-meta.xml
<CustomObject>
    <label>Call/Visit Report</label>
    <nameField>
        <displayFormat>CID-{0000000000}</displayFormat>
        <label>Call Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call/Visit Report</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>