wier/force-app/main/default/objects/Call_Report__c/fields/Attendee1__c.field-meta.xml
<CustomField>
    <fullName>Attendee1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call/Visit Report (Attendee1)</relationshipLabel>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>