wier/force-app/main/default/objects/Call_Report__c/fields/Attendee2__c.field-meta.xml
<CustomField>
    <fullName>Attendee2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>