wier/force-app/main/default/objects/Call_Report__c/fields/Attendee3__c.field-meta.xml
<CustomField>
    <fullName>Attendee3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>