wier/force-app/main/default/objects/Call_Report__c/fields/Call_Visit_date__c.field-meta.xml
<CustomField>
    <fullName>Call_Visit_date__c</fullName>
    <label>Call/Visit date</label>
    <type>DateTime</type>
</CustomField>