wier/force-app/main/default/objects/Call_Report__c/fields/Communication_type__c.field-meta.xml
<CustomField>
    <fullName>Communication_type__c</fullName>
    <description>Communication type</description>
    <label>Communication type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Personal visit</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>