wier/force-app/main/default/objects/Call_Report__c/fields/Contacted_but_not_reached__c.field-meta.xml
<CustomField>
    <fullName>Contacted_but_not_reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted but not reached</label>
    <type>Checkbox</type>
</CustomField>