wier/force-app/main/default/objects/Call_Report__c/fields/Contacted_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Spoken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted &amp; Spoken</label>
    <type>Checkbox</type>
</CustomField>