wier/force-app/main/default/objects/Call_Report__c/fields/Customer_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Created_Date__c</fullName>
    <formula>Customer__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Created Date</label>
    <type>Date</type>
</CustomField>