wier/force-app/main/default/objects/Call_Report__c/fields/Latest_Customer_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Customer_Contact_Date__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Attendee1__r.CreatedDate),
        ISBLANK(Attendee2__r.CreatedDate),
        ISBLANK(Attendee3__r.CreatedDate),
        ISBLANK(Attendee4__r.CreatedDate),
		ISBLANK(Attendee5__r.CreatedDate)
    ),
    NULL,
    DATE(1900, 01, 01) +
    MAX(
        BLANKVALUE(
            DATEVALUE(Attendee1__r.CreatedDate), 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            DATEVALUE(Attendee2__r.CreatedDate),
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            DATEVALUE(Attendee3__r.CreatedDate),
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            DATEVALUE(Attendee4__r.CreatedDate),
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
		BLANKVALUE(
            DATEVALUE(Attendee5__r.CreatedDate),
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)
    )
)</formula>
    <label>Latest Customer Contact Date</label>
    <type>Date</type>
</CustomField>