wier/force-app/main/default/objects/Call_Report__c/fields/Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Not_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Contacted</label>
    <type>Checkbox</type>
</CustomField>