wier/force-app/main/default/objects/Call_Report__c/fields/Number_Open_Task__c.field-meta.xml
<CustomField>
    <fullName>Number_Open_Task__c</fullName>
    <label>Number of Open Task</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>