wier/force-app/main/default/objects/Call_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>