wier/force-app/main/default/objects/Call_Report__c/fields/Others_CustomerSide__c.field-meta.xml
<CustomField>
    <fullName>Others_CustomerSide__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>