wier/force-app/main/default/objects/Call_Report__c/fields/Participant1__c.field-meta.xml
<CustomField>
    <fullName>Participant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Report</relationshipName>
    <type>Lookup</type>
</CustomField>