wier/force-app/main/default/objects/Call_Report__c/fields/Participant2__c.field-meta.xml
<CustomField>
    <fullName>Participant2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Report1</relationshipName>
    <type>Lookup</type>
</CustomField>