wier/force-app/main/default/objects/Call_Report__c/fields/Participant3__c.field-meta.xml
<CustomField>
    <fullName>Participant3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Report2</relationshipName>
    <type>Lookup</type>
</CustomField>