wier/force-app/main/default/objects/Call_Report__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>Quotation__c.COpportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Call/Visit Report</relationshipLabel>
    <relationshipName>Call_Report</relationshipName>
    <type>Lookup</type>
</CustomField>