wier/force-app/main/default/objects/Call_Report__c/fields/Reason_for_visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_visit__c</fullName>
    <label>Reason for call/visit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow up on Lead</fullName>
            </value>
            <value>
                <fullName>Business development</fullName>
            </value>
            <value>
                <fullName>Courtesy visit</fullName>
            </value>
            <value>
                <fullName>Capturing marketing intelligence</fullName>
            </value>
            <value>
                <fullName>Complaint redressal</fullName>
            </value>
            <value>
                <fullName>Delayed job delivery</fullName>
            </value>
            <value>
                <fullName>Market intelligence</fullName>
            </value>
            <value>
                <fullName>Technical/commercial evaluation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Follow up on Opportunity</fullName>
            </value>
            <value>
                <fullName>Follow up on Quotation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>