wier/force-app/main/default/objects/Call_Report__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF(INCLUDES( Reason_for_visit__c , &apos;Follow up on Lead&apos;),&apos;Follow up on Lead&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Follow up on Opportunity&apos;),&apos;Follow up on Opportunity&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Follow up on Quotation&apos;),&apos;Follow up on Quotation&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Courtesy visit&apos;),&apos;Courtesy visit&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Capturing marketing intelligence&apos;),&apos;Capturing marketing intelligence&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Business development&apos;),&apos;Business development&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Complaint redressal&apos;),&apos;Complaint redressal&apos;,&apos;&apos;)+&apos;&apos;+
IF(INCLUDES( Reason_for_visit__c , &apos;Others&apos;),&apos;Others&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>