wier/force-app/main/default/objects/Call_Report__c/validationRules/Check_box_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_box_validation</fullName>
    <active>true</active>
    <errorConditionFormula>if( $UserRole.Name =&quot;Customer Service Representative&quot;,if(AND( Contacted_Spoken__c ==FALSE, Contacted_but_not_reached__c ==FALSE, Not_Contacted__c ==FALSE),TRUE,FALSE),FALSE)</errorConditionFormula>
    <errorMessage>you have to select at least one check box to conform this action.</errorMessage>
</ValidationRule>