wier/force-app/main/default/objects/Call_Report__c/validationRules/Customer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>if( $UserRole.Name =&quot;Customer Service Representative&quot;,

NOT(OR( Contacted_Spoken__c ==TRUE, Contacted_but_not_reached__c ==TRUE, Not_Contacted__c ==TRUE)),FALSE)</errorConditionFormula>
    <errorMessage>You must select one of the possibilities as regards contacting the customer.</errorMessage>
</ValidationRule>