wier/force-app/main/default/objects/Call_Report__c/validationRules/Owner_should_be_always_Particicpant_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_should_be_always_Particicpant_1</fullName>
    <active>false</active>
    <description>Owner should be always Participant1</description>
    <errorConditionFormula>if($User.Id    &lt;&gt;  Participant1__r.Id , True, False )</errorConditionFormula>
    <errorMessage>Participant 1 should be the owner of the report</errorMessage>
</ValidationRule>