wier/force-app/main/default/objects/Call_Report__c/listViews/All_CVR_Iraq.listView-meta.xml
<ListView>
    <fullName>All_CVR_Iraq</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Customer__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quotation__c</columns>
    <columns>Reason_for_visit__c</columns>
    <columns>Comment__c</columns>
    <columns>Call_Visit_date__c</columns>
    <columns>Communication_type__c</columns>
    <columns>Attendee1__c</columns>
    <columns>Number_Open_Task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>KNVrao</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Aws</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Ramesh.K</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Wasim</value>
    </filters>
    <label>All CVR (Iraq)</label>
    <sharedTo>
        <group>Iraq_Head_of_Sales</group>
    </sharedTo>
</ListView>