wier/force-app/main/default/objects/Call_Report__c/listViews/All_CVR_NAI.listView-meta.xml
<ListView>
    <fullName>All_CVR_NAI</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Number_Open_Task__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Customer__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quotation__c</columns>
    <columns>Reason_for_visit__c</columns>
    <columns>Comment__c</columns>
    <columns>Call_Visit_date__c</columns>
    <columns>Communication_type__c</columns>
    <columns>Attendee1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>A.Hawas</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Basem</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Omar.O</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>V.Pandey</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Ramesh.R</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Ninad</value>
    </filters>
    <label>All CVR (NAI)</label>
    <sharedTo>
        <role>Non_DXB_Non_Iraq_Team_member</role>
    </sharedTo>
</ListView>