wier/force-app/main/default/objects/Call_Report__c/listViews/Business_Head_Iraq_Call_Report.listView-meta.xml
<ListView>
    <fullName>Business_Head_Iraq_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Head - Iraq</label>
    <queue>Business_Head_Iraq</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>