wier/force-app/main/default/objects/Call_Report__c/listViews/CVR_Ninad.listView-meta.xml
<ListView>
    <fullName>CVR_Ninad</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Reason_for_visit__c</columns>
    <columns>Customer__c</columns>
    <columns>Call_Visit_date__c</columns>
    <columns>Communication_type__c</columns>
    <columns>Comment__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Attendee1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Number_Open_Task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Ninad</value>
    </filters>
    <label>CVR Ninad</label>
    <sharedTo>
        <group>Oman_Opportunities_View</group>
    </sharedTo>
</ListView>