wier/force-app/main/default/objects/Call_Report__c/listViews/Head_of_Sales_Oman_Call_Report.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_Oman_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Head of Sales - Oman</label>
    <queue>Head_of_Sales_Oman</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>