wier/force-app/main/default/objects/Call_Report__c/listViews/Head_of_Sales_Projects_Call_Report.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_Projects_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Head - Projects</label>
    <queue>Business_Head_Projects</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>